--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,4 +142,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="logo_img_st">logo</string>
     <string name="title_activity_sobre">SobreActivity</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
